--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,6 +17,7 @@ pipeline {
             steps {
                 sh '''touch test2.txt
                 cat /etc/*release*
+                touch test2.test
                 '''
             }
         }
