--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,9 +12,15 @@ pipeline {
             agent {
                 docker {
                     image 'alpine'
+                   
                 }
             }  
             steps {
+                script {
+                    docker.image('alpine').inside('-it') {
+                        sh 'sh'
+                    }
+                }
                 sh '''touch test2.txt
                 cat /etc/*release*
                 touch test2.test
