--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,8 +16,7 @@ pipeline {
             }  
             steps {
                 sh '''touch test2.txt
-                cat /etc/*release*
-                touch test2.test
+                /etc/*release* > release.txt
                 '''
             }
         }
