--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,22 +22,17 @@ pipeline {
             }
         }
         stage('Test') {
-            // agent{
-            //     docker {
-            //         image 'node:18-alpine'
-            //         reuseNode true
-            //     }
+            agent{
+                docker {
+                    image 'node:18-alpine'
+                    reuseNode true
+                }
                 
-            // }
+            }
             steps {
                 sh '''
                     echo "Testing the application"
-                    // ls -la
-                    // node --version
-                    // npm --version
-                    // npm ci
-                    // npm run test
-                    // ls -la
+                    npm test
 
                     '''
             }
